--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tinymce/tinymce-react": "^4.2.0",
     "@zerocmf/component": "^1.0.0",
     "antd-img-crop": "^4.2.8",
+    "classnames": "^2.3.2",
     "immer": "^9.0.16",
     "react": "17.x",
     "react-color": "^2.19.3",
@@ -52,5 +53,6 @@
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
     "yorkie": "^2.0.0"
-  }
+  },
+  "__npminstall_done": false
 }
